--- a/www/interior-redesign-classes.htm
+++ b/www/interior-redesign-classes.htm
@@ -61,7 +61,7 @@
 					<li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
                     	<ul>
                         	<li><a href="interior-redesign-intro.htm">Introduction to Interior Redesign</a></li>
-                        	<li><a href="interior-redesign-professional.htm">Redesign Intensive</a></li>
+                        	<li><a href="interior-redesign-intensive.htm">Redesign Intensive</a></li>
                         	<li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
                         </ul>
                     </li>
@@ -98,46 +98,22 @@
           <td width="540" align="left" valign="top"><br />
             <!-- InstanceBeginEditable name="content" -->
           <h1 align="center"> Interior Redesign Classes</h1>
-          <p align="left"><img src="images/redesign_bed_stool.jpg" alt="Interior redecorating (sometimes called one-day decorating) classes offered by the School of Interior Redesign include an Introduction to Interior Redesign seminar, Interior Redesign for the Professional, and an Intensive Interior Redesign and Real Estate Staging workshop, available in our Milford CT school or for home study through teleclasses." width="134" height="200" hspace="6" align="right" />Interior
-            redesign, or using the homeowner's own things to create warm, inviting
-            spaces, is becoming more and more popular, as people realize the
-            incredible difference this practical, less expensive alternative
-            to traditional interior decorating or design can make in their homes.&nbsp; And
-            now, through the School of Interior Redesign, you can <strong>learn
-            the art of interior redesign</strong> (sometimes called <strong>one
-            day decorating</strong>),
-            whether to start a new career, add to your existing business, or
-            to simply use in your own home.</p>
-          <h2 align="left">Introduction to Interior Redesign </h2>
-          <p align="left">Through our <a href="interior-redesign-intro.htm">one-day
-              seminar in interior redesign</a>,
-            you will learn how to have the home of your dreams - without buying
-            a thing!&nbsp; This seminar also provides an excellent <strong>introduction
-            to</strong> <strong>interior redesign</strong> for those interested in the possibility of a
+          <p><img src="images/redesign_bed_stool.jpg" alt="Interior redecorating (sometimes called one-day decorating) classes offered by the School of Interior Redesign include an Introduction to Interior Redesign seminar, Interior Redesign for the Professional, and an Intensive Interior Redesign and Real Estate Staging workshop, available in our Milford CT school or for home study through teleclasses." width="134" height="200" hspace="6" align="right" />Interior redesign, or using the homeowner's own things to create warm, inviting
+            spaces, is becoming more and more popular, as people realize the incredible difference this practical, less expensive alternative to traditional interior decorating or design can make in their homes. And now, through the School of Interior Redesign LLC, you can <strong>learn the art of interior redesign</strong> (sometimes called <strong>one day decorating</strong>), whether to start a new career, add to your existing business, or to simply use in your own home.</p>
+          <h2>Introduction to Interior Redesign</h2>
+          <p>Through our <a href="interior-redesign-intro.htm">one-day seminar in interior redesign</a>, you will learn how to have the home of your dreams - without buying
+            a thing! This seminar also provides an excellent <strong>introduction to</strong> <strong>interior redesign</strong> for those interested in the possibility of a
             new career.</p>
-          <h2 align="left">Redesign for the Professional </h2>
-          <p align="left">Our <a href="interior-redesign-professional.htm">three-day
-              interior redesign workshop</a>, an excellent
-            opportunity for the <strong>entrepreneur looking to
-            incorporate</strong> <strong>interior
-              redesign</strong> <strong>into his or her business</strong>, provides
-              training in the art of redesign, three hands-on interior redesigns,
-              as well as marketing information for redesign.&nbsp; </p>
-          <h2 align="left">Interior Redesign/Real Estate Staging Intensive</h2>
-          <p align="left">And
-            if it's <strong>interior redesign</strong> (<strong>one
-            day decorating</strong>) with all the frills, including <strong>real estate staging </strong>(<strong>home staging</strong>)  as well as <strong>starting and marketing your interior redesign and real estate staging</strong> <strong>business</strong>, the <a href="interior-redesign-staging.htm">five-day comprehensive workshop</a> is for you!</p>
+          <h2>Interior Redesign Intensive</h2>
+          <p>Our <a href="interior-redesign-intensive.htm">three-day interior redesign workshop</a> provides all the necessary training to learn the art of redesign. Included in this three-day Intensive are classroom time and two hands-on interior redesigns to provide the opportunity to practice what you've learned.</p>
+          <h2>Interior Redesign/Real Estate Staging Intensive</h2>
+          <p>If you would like to learn both interior redesign for those clients staying in the home and real estate staging for your selling clients, this four-day comprehensive workshop is for you! Complete with classroom time, two hands-on redesigns, and one hands-on staging, you’ll be ready to incorporate redesign and staging into your current business. (If you are interested in starting a redesign and staging business, please see <a href="business-of-design.htm">The Business of Design</a>)</p>
             <h2>Interior Redesign Home Study</h2>
 			<p>Our <a href="assets/sir-interior-redesign-home-study.pdf" target="_blank">interior redesign home study</a>, teaches <strong>you the art of interior redesign, at your own pace and working in the comfort of your own home</strong>. Broken into modules for ease of learning, the comprehensive manual and accompanying workbook provide all of the information and exercises needed to ensure your <strong>complete and thorough understanding of interior redesign</strong>.</p>
             <h2>Interior Redesign and Real Estate Staging Home Study</h2>
             <p>If your goal is to learn both interior redesign and real estate staging, the <a href="assets/sir-interior-redesign-and-staging-home-study.pdf" target="_blank">interior redesign and real estate staging home study</a> is what you’re looking for! This home study program is filled with everything you need to know about <strong>interior redesign and real estate staging</strong>. Included are a <strong>comprehensive manual</strong> and accompanying <strong>workbook</strong> filled with information and exercises to ensure your complete understanding of redesign and staging.</p> 
-          <blockquote>
-            <p align="left">So check out the interior redesign workshops now
-              for further information... and begin living your dream!</p>
-            <p align="center"><a href="questions-interior-redesign-staging-training.htm"><em><strong>Click
-                    here for the questions you should ask ...and </strong></em><br />
-                <em><strong>what you should know about training and certification</strong></em></a><em><strong>.</strong></em></p>
-          </blockquote>
+            <blockquote>So check out the interior redesign workshops now
+              for further information...and begin living your dream!</blockquote>
           <!-- InstanceEndEditable --></td>
         </tr>
         <tr>
@@ -151,11 +127,8 @@
                 <a href="http://www.associationofdesigneducation.com" target="_blank"><img src="images/logo_ADE.jpg" alt="Ann Anderson, Founder and Director of the School of Interior Redesign, is a member of ADE, the Association of Design Education, an organization of professionals who teach interior decorating, interior redesign, one day decorating, home staging and real estate staging." height="70" hspace="14" border="0" /></a>
                 <a href="http://www.networkofexecutivewomen.org" target="_blank"><img src="images/newlogo_transp.gif" width="121" height="68" hspace="14" border="0" /></a>
                 <a href="http://www.interiordesignsociety.org/" target="_blank"><img src="images/logo_ids.jpg" alt="Ann Anderson, a graduate of the Sheffield School of Interior Design and a Certified Interior Redesign Specialist, is a member of IDS, the Interior Design Society." width="95" height="70" hspace="14" border="0" /></a>
-            </td>
-        </tr>
-        <tr>
-          <td colspan="4" class="footer"><div align="left"><a class="footer" href="#top">Return to top of page</a></div>
-          </td>
+				<div class="footer"><a class="footer" href="#top">Return to top of page</a></div>
+			</td>
         </tr>
       </table></td>
   </tr>
