--- a/www/interior-redesign-intensive.htm
+++ b/www/interior-redesign-intensive.htm
@@ -97,24 +97,22 @@
           <td bgcolor="#000000" align="left" valign="top" class="navbar"><img src="images/black_line.jpg" width="6" /></td>
           <td width="540" align="left" valign="top"><br />
             <!-- InstanceBeginEditable name="content" -->
-            <h1>Interior Redesign for the Professional </h1>
+            <h1>Interior Redesign Intensive </h1>
             <p class="course-description">A 3-day Interior Redesign Workshop</p>
-            <p><img src="images/website-living-room.jpg" width="250" height="151" align="right" />If you already have a business, but are interested in adding to it by offering interior redesign services, our three-day Interior Redesign for the Professional Workshop is just for you. This interior redesign workshop covers much of the same material as the five-day workshop, but without the information on starting your own design business.</p>
-            <p>During this interior redesign workshop, you'll learn:</p>
+            <p><img src="images/website-living-room.jpg" width="250" height="151" align="right" />If you already have a business, but are interested in adding to it by offering interior redesign services, our three-day Interior Redesign Intensive Workshop is just for you.</p>
+            <p>During this workshop, you'll learn:</p>
             <ul>
-              <li>All of the principles and techniques needed to begin incorporating interior redesign (one day decorating) into your business.</li>
+              <li>An extremely detailed analysis of interior design (one day decorating), including the principles and techniques critical to your success as an Interior Redesign Specialist.</li>
+              <li>Thte step-by-step process necessary for a successful redesign.</li>
+              <li>The design rules used by all successful interior designers and decorators to insure a beautiful, comfortable living space.</li>
               <li>Basic interior decorating guidelines to enhance your knowledge base.</li>
-              <li>Extensive information on marketing interior redesign as a part of your business, including ready to use marketing materials.</li>
-              <li>Lists of resources to help you as you grow your interior redesign business.</li>
             </ul>
             <h2>We Provide Hands-On Interior Redesign Training</h2>
-            <p>In addition to covering this material during class, you will also complete two hands-on interior redesigns, which will reinforce the information learned during classroom time. When class is over, training materials you will receive will continue to be an excellent resource as you grow your business. In addition, you are eligible to join the <a href="http://www.associationofdesigneducation.com" target="_blank">Association of Design Education</a>, which will continue to provide you with the ongoing educational support you will need as you start and grow your interior redesign business.</p>
-            <p><em><strong>Click here for <a href="questions-interior-redesign-staging-training.htm">answers to frequently asked questions</a> and for more information on what you should know about training and certification</strong></em>.</p>
-            <h2>Enroll in the Interior Redesign for<br />
-            the Professional Class</h2>
-            <p><sup><a name="details"></a>1</sup>The three-day Interior Redesign for the Professional can be taken in 3 back-to-back days or one day at a time, depending on your needs. The cost for the three days of interior redesign (one day decorating) training is $1,500, which includes all of the above, as well as lunch, beverages, and snacks each day.&nbsp;If you prefer to take the training at different times, you must still take the days in order. Please check the <a href="course-schedule.htm">Class Schedule</a> or contact the School of Interior Redesign for more information.</p>
-            <p>To see the schedule of interior redesign classes, check our <a href="course-schedule.htm">Class Schedule</a> for more information.</p>
-            <p>To reserve your space in any interior redesign class, complete the <a href="register-redesign-staging-class.htm">Application</a> and submit it, along with an initial <a href="payment.htm">deposit of $500</a>. The balance is due two weeks prior to the start of class. One-day classes must be paid in full at the time of enrollment.</p>
+            <p>In addition to covering this material during class, you will also complete two hands-on interior redesigns, which will reinforce the information learned during classroom time. When class is over, training materials you will receive will continue to be an excellent resource as you grow your business.</p>
+            <h2>To Enroll in the Interior Redesign Intensive</h2>
+            <p><strong>Cost for the three days of interior redesign training</strong> is $1,500, which includes all of the above, as well as lunch, beverages, and snacks each day.</p>
+            <p><strong>To see the schedule of interior redesign classes</strong>, check our <a href="course-schedule.htm">Class Schedule</a> or contact the School of Interior Redesign LLC for more information.</p>
+            <p><strong>To reserve your space in any interior redesign class</strong>, complete the <a href="register-redesign-staging-class.htm">Application</a> and submit it, along with an initial <a href="payment.htm">deposit of $500</a>. The balance is due two weeks prior to the start of class.</p>
             <!-- #BeginLibraryItem "/Library/cancellation-policy.lbi" -->
             <p><strong>Cancellation Policy</strong>: A full refund will be given if the student cancels ten days prior to the first day of class. A 75% refund will apply if the student cancels at anytime after the ten day cancellation period. No refund will be given after the start of classes. However, should a student need to cancel or leave due to an emergency, the tuition will be applied to another scheduled class. Refunds will be mailed to the student within fourteen days of cancellation.</p>
             <!-- #EndLibraryItem --><!-- #BeginLibraryItem "/Library/for-more-info.lbi" -->
