--- a/www/interior-redesign-intro.htm
+++ b/www/interior-redesign-intro.htm
@@ -60,7 +60,7 @@
 					<li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
                     	<ul>
                         	<li><a href="interior-redesign-intro.htm">Introduction to Interior Redesign</a></li>
-                        	<li><a href="interior-redesign-professional.htm">Redesign Intensive</a></li>
+                        	<li><a href="interior-redesign-intensive.htm">Redesign Intensive</a></li>
                         	<li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
                         </ul>
                     </li>
@@ -96,18 +96,11 @@
           <td bgcolor="#000000" align="left" valign="top" class="navbar"><img src="images/black_line.jpg" width="6" /></td>
           <td width="540" align="left" valign="top"><br />
             <!-- InstanceBeginEditable name="content" -->
-          <h1 align="center"> Introduction to Interior Redesign </h1>
+          <h1 align="center"> Introduction to Interior Redesign</h1>
           <p class="course-description">A one-day interior redesign seminar</p>
-          <p><strong>If you are interested in the possibility of a career in
-            redesign</strong> (<strong>one day decorating</strong>)
-            but want to know more, or if your are simply interested in redesign
-            for your own home, we&rsquo;ve
-            designed a one-day seminar just for you.</p>
-          <p><img src="images/redesign_dining_living.jpg" alt="The School of Interior Redesign's one day Introduction to Interior Redesign seminar is for anyone interested in exploring redesign as a possible career or learning about redesign for your own home." width="179" height="250" hspace="8" vspace="0" align="right" />The
-            day begins with a continental breakfast and get-acquainted session
-            as we get to know each other a little better. We then spend
-            the morning discussing the basics of interior redesign. Included
-            in the discussion are:</p>
+          <p><strong>If you are interested in the possibility of a career in redesign</strong> (<strong>one day decorating</strong>)
+            but want to know more, or if you are simply interested in redesign for your own home, we&rsquo;ve designed a one-day seminar just for you.</p>
+          <p><img src="images/redesign_dining_living.jpg" alt="The School of Interior Redesign's one day Introduction to Interior Redesign seminar is for anyone interested in exploring redesign as a possible career or learning about redesign for your own home." width="179" height="250" hspace="8" vspace="0" align="right" />The day begins with a get-acquainted session as we get to know each other a little better. We then spend the morning discussing the basics of interior redesign. Included in the discussion are:</p>
           <ul>
             <li>How to begin an interior redesign </li>
             <li>Tools and supplies </li>
@@ -117,32 +110,18 @@
             <li>Proper furniture placement, hanging of artwork, and accessorizing </li>
             <li>Finishing touches </li>
           </ul>
-          <p>Then, after lunch, we take a field trip to someone&rsquo;s home
-            and actually redesign a room!</p>
-          <p>At the end of the day you will be prepared to take everything you
-            learned and transform your own home &ndash; starting tomorrow!</p>
-          <p align="center"><a href="questions-interior-redesign-staging-training.htm"><em><strong>Click
-                  here for the questions you should ask ...and </strong></em><br />
-              <em><strong>what you should know about training and certification</strong></em></a><em><strong>.</strong></em></p>
+          <p>Then, after lunch, we take a field trip to someone&rsquo;s home and actually redesign a room!</p>
+          <p>At the end of the day you will be prepared to take everything you learned and transform your own home&mdash;starting tomorrow!</p>
+        
           <h2>To Enroll in the Introduction to Interior Redesign Class:</h2>
-          <p><strong>Cost for the One-Day</strong> <strong>Interior
-              Redesign Seminar </strong>is
-            $300, which includes <em><a href="work_files/books_redesign_staging.htm#Redesign_book">Redesign
-            Step-by-Step,</a> </em>continental breakfast, and lunch.&nbsp; </p>
+          <p><strong>Cost for the One-Day Interior Redesign Seminar</strong> is $300, which includes <em><a href="work_files/books_redesign_staging.htm#Redesign_book">Redesign Step-by-Step</a></em>, and lunch.</p>
           <blockquote>
-            <p><strong>To see the schedule of interior
-                redesign (one day decorating) classes</strong>,             
-                check the <a href="course-schedule.htm">Class Schedule</a> for
-              more information.&nbsp; </p>
-            <p>T<strong>o reserve your space
-              in an</strong> <strong>interior redesign class</strong>, complete
-              the <a href="register-redesign-staging-class.htm">Application</a> and
-              submit, along with your <a href="payment.htm">deposit of $100</a>.&nbsp; The
-              balance is due two weeks prior to the start of class.</p>
+            <p><strong>To see the schedule of interior redesign (one day decorating) classes</strong>, check the <a href="course-schedule.htm">Class Schedule</a> for more information.</p>
+            <p><strong>To reserve your space in an</strong> <strong>interior redesign class</strong>, complete the <a href="register-redesign-staging-class.htm">Application</a> and submit, along with your <a href="payment.htm">deposit of $100</a>. The balance is due two weeks prior to the start of class.</p>
             </blockquote>
-          <!-- #BeginLibraryItem "/Library/cancellation-policy.lbi" --><p><strong>Cancellation Policy</strong>: A full refund will be given if the student cancels ten days prior to the first day of class. A 75% refund will apply if the student cancels at anytime after the ten day cancellation period. No refund will be given after the start of classes. However, should a student need to cancel or leave due to an emergency, the tuition will be applied to another scheduled class. Refunds will be mailed to the student within fourteen days of cancellation.</p><!-- #EndLibraryItem --><!-- #BeginLibraryItem "/Library/for-more-info.lbi" --><p style="text-align:center;"><strong>For more information on any interior redesign training workshop</strong>,<br />
-email <a href="mailto:info@schoolofinteriorredesign.com">info@schoolofinteriorredesign.com</a> or call the School of Interior Redesign at<br />
-<strong>(203) 783-1556</strong> or <strong>(877) 814-0518</strong> toll-free.</p><!-- #EndLibraryItem --><!-- InstanceEndEditable --></td>
+          <!-- #BeginLibraryItem "/Library/cancellation-policy.lbi" --><p><strong>Cancellation Policy</strong>: A full refund will be given if the student cancels ten days prior to the first day of class. A 75% refund will apply if the student cancels at anytime after the ten day cancellation period. No refund will be given after the start of classes. However, should a student need to cancel or leave due to an emergency, the tuition will be applied to another scheduled class. Refunds will be mailed to the student within fourteen days of cancellation.</p><!-- #EndLibraryItem --><!-- #BeginLibraryItem "/Library/for-more-info.lbi" -->
+          <p align="center"><strong>For more information on any interior redesign training workshop</strong>, email <a href="mailto:info@schoolofinteriorredesign.com">info@schoolofinteriorredesign.com</a> or call the School of Interior Redesign LLC at <strong><a href="tel:203-783-1556">(203) 783-1556</a></strong> or <strong><a href="tel:877-814-0518">(877) 814-0518</a></strong> toll-free.</p>
+          <!-- #EndLibraryItem --><!-- InstanceEndEditable --></td>
         </tr>
         <tr>
           <td width="10" align="left" valign="top" class="navbar">&nbsp;</td>
@@ -155,11 +134,8 @@ email <a href="mailto:info@schoolofinteriorredesign.com">info@schoolofinteriorre
                 <a href="http://www.associationofdesigneducation.com" target="_blank"><img src="images/logo_ADE.jpg" alt="Ann Anderson, Founder and Director of the School of Interior Redesign, is a member of ADE, the Association of Design Education, an organization of professionals who teach interior decorating, interior redesign, one day decorating, home staging and real estate staging." height="70" hspace="14" border="0" /></a>
                 <a href="http://www.networkofexecutivewomen.org" target="_blank"><img src="images/newlogo_transp.gif" width="121" height="68" hspace="14" border="0" /></a>
                 <a href="http://www.interiordesignsociety.org/" target="_blank"><img src="images/logo_ids.jpg" alt="Ann Anderson, a graduate of the Sheffield School of Interior Design and a Certified Interior Redesign Specialist, is a member of IDS, the Interior Design Society." width="95" height="70" hspace="14" border="0" /></a>
-            </td>
-        </tr>
-        <tr>
-          <td colspan="4" class="footer"><div align="left"><a class="footer" href="#top">Return to top of page</a></div>
-          </td>
+				<div class="footer"><a class="footer" href="#top">Return to top of page</a></div>
+			</td>
         </tr>
       </table></td>
   </tr>
