--- a/www/marketing-your-design-related-business.htm
+++ b/www/marketing-your-design-related-business.htm
@@ -61,7 +61,7 @@
 					<li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
                     	<ul>
                         	<li><a href="interior-redesign-intro.htm">Introduction to Interior Redesign</a></li>
-                        	<li><a href="interior-redesign-professional.htm">Redesign Intensive</a></li>
+                        	<li><a href="interior-redesign-intensive.htm">Redesign Intensive</a></li>
                         	<li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
                         </ul>
                     </li>
@@ -97,8 +97,31 @@
           <td bgcolor="#000000" align="left" valign="top" class="navbar"><img src="images/black_line.jpg" width="6" /></td>
           <td width="540" align="left" valign="top"><br />
             <!-- InstanceBeginEditable name="content" -->
-
-            <!-- InstanceEndEditable --></td>
+            <h1>Marketing Your Design-Related Business</h1>
+            <p class="course-description">A half-day workshop</p>
+            <p>Ready to kick off your business but not quite sure how to do that? Do you have all of the design ability you need to have a business in interior decorating, interior redesign, or real estate staging but just don't know how to get customers? Have you started your design-related business, but are wondering where the clients are and how you can reach them?</p>
+            <p>Marketing Your Design-Related Business is just the tool you need! Written from a designer's perspective, this workshop is jam-packed with creative ideas, and instruction on how you can implement these ideas for very little money to effectively market your business.</p>
+              <p>During this course, you will learn the secrets of locating your potential clients, and getting them to buy your services!</p>
+            <p><strong>Some of the things you will learn include:</strong></p>
+            <ul>
+              <li><strong>Understanding the marketing umbrella</strong>: advertising, marketing, promotion, public relations and publicity, and sales</li>
+              <li>Knowing your market</li>
+              <li><strong>Branding your business</strong>: Creating the &quot;look&quot; and &quot;feel&quot; of your business</li>
+              <li>How to communicate effectively with your client, both verbally and in writing</li>
+              <li>The tools necessary to market in print, through the internet, and face to face</li>
+              <li>Public speaking and presentation techniques and ideas</li>
+              <li>How to <strong>create a marketing plan</strong> and measure your results</li>
+              <li>Resources</li>
+            </ul>
+            <p>...As well as a myriad of business forms that will keep you and your business ready for success.</p>
+            <p>With the step-by-step process provided, you will know exactly what needs to be done in order to market your design-related business using tried and true techniques that keep you one step ahead of the competition.</p>
+            <h2>To Enroll in the Marketing Your Design-Related Business</h2>
+            <p><strong>Cost for the half-day Marketing Your Design Related Business</strong> is $250.</p>
+            <p><strong>To see the schedule of Marketing Your Design Related Business classes</strong>, check the <a href="course-schedule.htm">Class Schedule</a> for more information. </p>
+            <p><strong>To reserve your space in an upcoming class</strong>, complete the <a href="register-redesign-staging-class.htm">Application</a> and submit, along with your <a href="payment.htm">deposit of $100</a>. The balance is due two weeks prior to the start of class.</p>
+            <!-- #BeginLibraryItem "/Library/cancellation-policy.lbi" -->
+            <p><strong>Cancellation Policy</strong>: A full refund will be given if the student cancels ten days prior to the first day of class. A 75% refund will apply if the student cancels at anytime after the ten day cancellation period. No refund will be given after the start of classes. However, should a student need to cancel or leave due to an emergency, the tuition will be applied to another scheduled class. Refunds will be mailed to the student within fourteen days of cancellation.</p>
+            <!-- #EndLibraryItem --><!-- #BeginLibraryItem "/Library/for-more-info.lbi" --><p align="center"><strong>For more information on any interior redesign training workshop</strong>, email <a href="mailto:info@schoolofinteriorredesign.com">info@schoolofinteriorredesign.com</a> or call the School of Interior Redesign LLC at <strong><a href="tel:203-783-1556">(203) 783-1556</a></strong> or <strong><a href="tel:877-814-0518">(877) 814-0518</a></strong> toll-free.</p><!-- #EndLibraryItem --><!-- InstanceEndEditable --></td>
         </tr>
         <tr>
           <td width="10" align="left" valign="top" class="navbar">&nbsp;</td>
@@ -111,11 +134,8 @@
                 <a href="http://www.associationofdesigneducation.com" target="_blank"><img src="images/logo_ADE.jpg" alt="Ann Anderson, Founder and Director of the School of Interior Redesign, is a member of ADE, the Association of Design Education, an organization of professionals who teach interior decorating, interior redesign, one day decorating, home staging and real estate staging." height="70" hspace="14" border="0" /></a>
                 <a href="http://www.networkofexecutivewomen.org" target="_blank"><img src="images/newlogo_transp.gif" width="121" height="68" hspace="14" border="0" /></a>
                 <a href="http://www.interiordesignsociety.org/" target="_blank"><img src="images/logo_ids.jpg" alt="Ann Anderson, a graduate of the Sheffield School of Interior Design and a Certified Interior Redesign Specialist, is a member of IDS, the Interior Design Society." width="95" height="70" hspace="14" border="0" /></a>
-            </td>
-        </tr>
-        <tr>
-          <td colspan="4" class="footer"><div align="left"><a class="footer" href="#top">Return to top of page</a></div>
-          </td>
+				<div class="footer"><a class="footer" href="#top">Return to top of page</a></div>
+			</td>
         </tr>
       </table></td>
   </tr>
