--- a/www/index.htm
+++ b/www/index.htm
@@ -70,7 +70,7 @@
 					<li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
                     	<ul>
                         	<li><a href="interior-redesign-intro.htm">Introduction to Interior Redesign</a></li>
-                        	<li><a href="interior-redesign-professional.htm">Redesign Intensive</a></li>
+                        	<li><a href="interior-redesign-intensive.htm">Redesign Intensive</a></li>
                         	<li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
                         </ul>
                     </li>
@@ -109,7 +109,7 @@
       <h1>The School of Interior Redesign, LLC...</h1>
       <h2>Teaches you how to make spaces beautiful and businesses successful.</h2>
       <hr/>
-      <p>The School of Interior Redesign offers <strong>educational instruction</strong> in:</p>
+      <p>The School of Interior Redesign LLC offers <strong>educational instruction</strong> in:</p>
       <ul>
         <ul>
           <li><strong>Interior redesign</strong> <strong>(one day decorating)</strong></li>
@@ -123,14 +123,8 @@
       <p>Whatever class or method of instruction you prefer, the <em><strong>quality of your education</strong></em> is assured.</p>
 <blockquote class="testimonial"><p>I just wanted to thank you! Taking your class last week was inspirational and motivational. You make the class engaging and fun. Thank you for your patience, time, and support.</p><em>Maureen Morris&mdash;Durham, CT.</em></blockquote>
       <p>Whether you are interested in learning about <strong>interior redesign</strong>, <strong>real estate staging</strong>, or just how to <strong>start or grow your business</strong>, the <em><strong>quality of the workshop</strong></em> is assured.&nbsp;</p>
-      <blockquote>Our curriculum has been approved for our students&rsquo; protection by the Commissioner of Higher Education for the State of Connecticut.</blockquote>
-      <blockquote>Most of our classes qualify you for membership in the <a href="http://www.associationofdesigneducation.com" target="_blank">Association of Design Education</a>, which will continue to provide on-going educational and networking opportunities.</blockquote>
-      <p><a href="questions-interior-redesign-staging-training.htm"><em><strong>Click here for the questions you should ask...and for</strong></em><br />
-        <em><strong>what you should know about training and certification.</strong></em></a></p>
-	
-
-      <h1>Sign Up for Our Free Ezine</h1>
-      <p>Want information as your business grows and changes, to help you begin your business, or just to stay in touch with the School of Interior Redesign?&nbsp; Then sign up for our <em><strong>free</strong></em> ezine. </p>
+<h1>Sign Up for Our Free E-zine</h1>
+      <p>Want information as your business grows and changes, to help you begin your business, or just to stay in touch with the School of Interior Redesign? Then sign up for our <em><strong>free</strong></em> e-zine. </p>
 <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
 <style type="text/css">
@@ -178,11 +172,8 @@
                 <a href="http://www.associationofdesigneducation.com" target="_blank"><img src="images/logo_ADE.jpg" alt="Ann Anderson, Founder and Director of the School of Interior Redesign, is a member of ADE, the Association of Design Education, an organization of professionals who teach interior decorating, interior redesign, one day decorating, home staging and real estate staging." height="70" hspace="14" border="0" /></a>
                 <a href="http://www.networkofexecutivewomen.org" target="_blank"><img src="images/newlogo_transp.gif" width="121" height="68" hspace="14" border="0" /></a>
                 <a href="http://www.interiordesignsociety.org/" target="_blank"><img src="images/logo_ids.jpg" alt="Ann Anderson, a graduate of the Sheffield School of Interior Design and a Certified Interior Redesign Specialist, is a member of IDS, the Interior Design Society." width="95" height="70" hspace="14" border="0" /></a>
-            </td>
-        </tr>
-        <tr>
-          <td colspan="4" class="footer"><div align="left"><a class="footer" href="#top">Return to top of page</a></div>
-          </td>
+				<div class="footer"><a class="footer" href="#top">Return to top of page</a></div>
+			</td>
         </tr>
       </table></td>
   </tr>
